<resources>
    <string name="app_name">MovieShowApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_id">Movie id</string>
    <string name="overview">Overview</string>
    <string name="release_data">Release Data</string>
    <string name="movie_title">Movie Title</string>
    <string name="main_image">main_image</string>
    <string name="search">Search</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_budget">Movie Budget : $</string>
    <string name="movie_language">Movie Language :</string>
    <string name="movie_popularity">Movie Popularity:</string>
    <string name="movie_original_name">Movie Original Name :</string>
    <string name="similar_type_movies">Similar Type Movies</string>
    <string name="movies">Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="movie_rating">Movie Rating :</string>
</resources>