<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <ScrollView
        android:id="@+id/detailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/detailLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailTitleTextView"
                android:fontFamily="casual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="#FFA500"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/detailImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                app:layout_constraintDimensionRatio="H,3:2" />

            <TextView
                android:id="@+id/detailOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/staticBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/movie_budget"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailBudgetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/staticLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/movie_language"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOriginalLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/staticPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/movie_popularity"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/staticOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/movie_original_name"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/staticRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/movie_rating"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/detailRatingbar"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressBackgroundTint="#605F5D"
                android:progressTint="#FFFF00"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/releaseDateTextView"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/detailStaticRecommendedMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:text="@string/similar_type_movies"
                android:textColor="#FFA500"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMovieRecyclerView"
                android:layout_width="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
